--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+Version 0.1.3
+- Improved map pickers code
+- Added add-on documentation
+
 Version 0.1.2
 - Allowed 2v2 maps to be played with the Ladder Era
 - Prevent map pickers to load if less than 2 maps are present in the map pool
@@ -16,7 +20,7 @@ Version 0.1.0
     -- Drakes
         --- Drake Fighter: 30% defense in shallow water
     -- Knalgan Alliance
-        --- Dwarves have 3 traits, hardy trait (rest heal if poisoned) is mandatory, healthy trait is removed.
+        --- Dwarves have 3 traits, hardy trait (always rest heal if poisoned) is mandatory, healthy trait is removed.
         --- Dwarvish Ulfserker: -20% arcane resistance
         --- Poacher: can have dextrous trait
         --- Footpad: melee blade 5-2
