--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+Version 0.1.4
+- Updated map pickers: map pool is printed to the chat area
+
 Version 0.1.3
 - Improved map pickers code
 - Added add-on documentation
