--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+Version 0.1.5
+- Removed Elvish Sorceress from the leaders pool
+- Removed Hornshark Island from the classic map pool
+
 Version 0.1.4
 - Updated map pickers: map pool is printed to the chat area
 
